<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17506" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
    <device id="retina6_1" orientation="portrait" appearance="light"/>
    <dependencies>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17505"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="System colors in document resources" minToolsVersion="11.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--View Controller-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="_1_23_Testes" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="lYz-Ho-3Hv">
                                <rect key="frame" x="49" y="64" width="317" height="32"/>
                                <segments>
                                    <segment title="First"/>
                                    <segment title="Second"/>
                                    <segment title="4"/>
                                    <segment title="asdd"/>
                                </segments>
                            </segmentedControl>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OfM-I6-iOU">
                                <rect key="frame" x="184" y="131" width="46" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="button_x"/>
                                <state key="normal" title="Button"/>
                                <connections>
                                    <action selector="actionButtonMessage:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Utf-hf-wb7"/>
                                </connections>
                            </button>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="irr-Bl-quC">
                                <rect key="frame" x="79" y="184" width="256" height="21"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                        <constraints>
                            <constraint firstItem="lYz-Ho-3Hv" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="49" id="4w2-OS-CJH"/>
                            <constraint firstItem="OfM-I6-iOU" firstAttribute="top" secondItem="lYz-Ho-3Hv" secondAttribute="bottom" constant="36" id="A3y-zR-p5q"/>
                            <constraint firstItem="OfM-I6-iOU" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="LtX-GD-fCR"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="lYz-Ho-3Hv" secondAttribute="trailing" constant="48" id="VHm-RP-Ibj"/>
                            <constraint firstItem="lYz-Ho-3Hv" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="20" id="s7r-OS-3dO"/>
                        </constraints>
                    </view>
                    <connections>
                        <outlet property="labelOutput" destination="irr-Bl-quC" id="8bQ-OM-sEY"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="34.782608695652179" y="93.75"/>
        </scene>
    </scenes>
    <resources>
        <systemColor name="systemBackgroundColor">
            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
        </systemColor>
    </resources>
</document>
